# Run_based_segmentation

./: CMakeLists.txt  package.xml
launch/: filter_ground.launch  segment_pc.launch
nodes/clustering/: scanlinerun.cpp
nodes/ground_filter/: groundplanfit.cpp
